<resources>
    <string name="app_name">Yoink</string>
    <string name="beginner">Beginner Challenges</string>
    <string name="challenges"> Challenges</string>
    <string name="Intermediate">Intermediate Challenges</string>
    <string name="Advanced">Advanced Challenges</string>
    <string name="Professional">Pro Challenges</string>
    <string name="Chef">Chef Challenges</string>
    <string name="back">&#60;</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="_fragment_label">Beginner</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start">Start Challenge</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Dummy">Dummy Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>