<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ChallengesFragment">

    <Button
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/color1"
        android:text="@string/back"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_beginner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/color1"
        android:text="@string/beginner"
        app:layout_constraintBottom_toTopOf="@+id/button_intermediate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <Button
        android:id="@+id/button_intermediate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="@color/color2"
        android:text="@string/Intermediate"
        app:layout_constraintBottom_toTopOf="@+id/button_advanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_beginner"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_advanced"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/color3"
        android:text="@string/Advanced"
        app:layout_constraintBottom_toTopOf="@+id/button_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_intermediate" />

    <Button
        android:id="@+id/button_pro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/color4"
        android:text="@string/Professional"
        app:layout_constraintBottom_toTopOf="@+id/button_chef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_advanced" />

    <Button
        android:id="@+id/button_chef"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="97dp"
        android:backgroundTint="@color/color5"
        android:text="@string/Chef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_pro" />

</androidx.constraintlayout.widget.ConstraintLayout>